# codeblocks_sf

./: .gitignore  Makefile.am  bundle.sh.in  configure.ac  devkitide.plist.in
src/: CodeBlocks_wx31_64.cbp  Makefile.am  devkitIDE.cbp  devkitIDE_64.cbp  devkitIDE_wx30.cbp  devkitIDE_wx31_64.cbp  updatedevkitIDE.bat  updatedevkitIDE30.bat  updatedevkitIDE30_64.bat  updatedevkitIDE31_64.bat
src/plugins/compilergcc/: Makefile.am  compilerdevkitA64.cpp  compilerdevkitA64.h  compilerdevkitARM.cpp  compilerdevkitARM.h  (+3 more)
src/plugins/scriptedwizard/resources/: Makefile.am  config.script
src/plugins/scriptedwizard/resources/3ds/: Makefile.am  wizard.script
src/plugins/scriptedwizard/resources/3ds/files/source/: main.c
src/plugins/scriptedwizard/resources/ds_arm9/: Makefile.am  wizard.script
src/plugins/scriptedwizard/resources/ds_arm9/files/: Makefile
src/plugins/scriptedwizard/resources/gamecube/: Makefile.am  wizard.script
src/plugins/scriptedwizard/resources/gamecube/files/: Makefile
src/plugins/scriptedwizard/resources/gba/: Makefile.am  wizard.script
src/plugins/scriptedwizard/resources/gba/files/: Makefile
src/plugins/scriptedwizard/resources/switch/: Makefile.am  wizard.script
src/plugins/scriptedwizard/resources/switch/files/: Makefile
src/plugins/scriptedwizard/resources/wii/: Makefile.am  wizard.script
src/plugins/scriptedwizard/resources/wii/files/: Makefile
src/sdk/: ccmanager.cpp  configmanager.cpp  filefilters.cpp  macrosmanager.cpp
src/src/: Makefile.am  app.cpp  appglobals.cpp  associations.cpp  associations.h  projectmanagerui.cpp
(+6 files in other folders)
